Increase timeout to 24 hours

--- a/kokoro/gcp_ubuntu/continuous.cfg
+++ b/kokoro/gcp_ubuntu/continuous.cfg
@@ -5,3 +5,6 @@
 # Location of the bash script. Should have value <github_scm.name>/<path_from_repository_root>.
 # github_scm.name is specified in the job configuration (next section).
 build_file: "kokoro-codelab-gargnitin/kokoro/gcp_ubuntu/kokoro_build.sh"
+
+# timeout 24hr - kokoro job will be killed after this time.
+timeout_mins: 1440
