--- a/kokoro/gcp_ubuntu/continuous.cfg
+++ b/kokoro/gcp_ubuntu/continuous.cfg
@@ -6,5 +6,5 @@
 # github_scm.name is specified in the job configuration (next section).
 build_file: "kokoro-codelab-gargnitin/kokoro/gcp_ubuntu/kokoro_build.sh"
 
-# timeout 24hr - kokoro job will be killed after this time.
-timeout_mins: 1440
+# timeout 1 week - kokoro job will be killed after this time.
+timeout_mins: 10080
